chore: Update image and metadata in Header.jsx and index.html

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <title>Portefolio Dincq Alexandre</title>
   <meta name="description" content="Alexandre Dincq, web developer fullstack">
   <meta name="author" content="Dincq Alexandre">
+  <meta name="keywords" content="web developer, fullstack, python, django, react, javascript">
   <meta name="copyright" content="Alexandre dincq ">
   <meta name="robots" content="index, follow">
 
@@ -23,6 +24,7 @@
   <meta property="profile:first_name" content="Dincq">
   <meta property="profile:last_name" content="Alexandre">
   <meta property="profile:username" content="Dincq Alexandre">
+  <meta property="og:image" content="https://alexandre-dincq-zy6o.vercel.app/images/moii.jpg" />
 
   <script type="application/ld+json">
     {
