--- a/index.html
+++ b/index.html
@@ -18,20 +18,20 @@
 
   <meta property="og:type" content="profile">
   <meta property="og:title" content="Portefolio">
-  <meta property="og:url" content="https://alexandre-dincq-zy6o.vercel.app/">
+  <meta property="og:url" content="https://alexandre-dincq.vercel.app/">
   <meta property="og:image" content="">
   <meta property="og:description" content="Web developer full stack, Python Django and React JavaScript">
   <meta property="profile:first_name" content="Dincq">
   <meta property="profile:last_name" content="Alexandre">
   <meta property="profile:username" content="Dincq Alexandre">
-  <meta property="og:image" content="https://alexandre-dincq-zy6o.vercel.app/images/moii.jpg" />
+  <meta property="og:image" content="https://alexandre-dincq.vercel.app/images/profil.jpg" />
 
   <script type="application/ld+json">
     {
       "@context": "http://schema.org/",
       "@type": "Person",
       "name": "Dincq",
-      "url": "https://alexandre-dincq-zy6o.vercel.app/",
+      "url": "https://alexandre-dincq.vercel.app/",
       "jobTitle": "Web developer full stack",
       ,
       "address": {
