--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <meta property="og:type" content="profile">
   <meta property="og:title" content="Portefolio">
   <meta property="og:url" content="https://alexandre-dincq.vercel.app/">
-  <meta property="og:image" content="">
+  <meta property="og:image" content="https://alexandre-dincq.vercel.app/images/profil.jpg" />
   <meta property="og:description" content="Web developer full stack, Python Django and React JavaScript">
   <meta property="profile:first_name" content="Dincq">
   <meta property="profile:last_name" content="Alexandre">
