--- a/index.html
+++ b/index.html
@@ -12,20 +12,20 @@
   <title>Portefolio Dincq Alexandre</title>
   <meta name="description" content="Alexandre Dincq, web developer fullstack">
   <meta name="author" content="Dincq Alexandre">
-  <meta name="image" content="https://alexandre-dincq.vercel.app/src/assets/images/profil.jpg">
+  <meta name="image" content="https://alexandre-dincq-zy6o.vercel.app//src/assets/images/profil.jpg">
   <meta name="keywords" content="web developer, fullstack, python, django, react, javascript">
   <meta name="copyright" content="Alexandre dincq ">
   <meta name="robots" content="index, follow">
 
   <meta property="og:type" content="profile">
   <meta property="og:title" content="Portefolio">
-  <meta property="og:url" content="https://alexandre-dincq.vercel.app/">
-  <meta property="og:image" content="https://alexandre-dincq.vercel.app/src/assets/images/profil.jpg" />
-
+  <meta property="og:url" content="https://alexandre-dincq-zy6o.vercel.app/">
+  
   <meta property="og:description" content="Web developer full stack, Python Django and React JavaScript">
   <meta property="profile:first_name" content="Dincq">
   <meta property="profile:last_name" content="Alexandre">
   <meta property="profile:username" content="Dincq Alexandre">
+  <meta property="og:image" content="https://alexandre-dincq-zy6o.vercel.app//src/assets/images/profil.jpg" />
 
   <script type="application/ld+json">
     {
